Buildi menee läpi mutta ohjelmisto ei käynnisty koska tietokanta ei ole alustettu. Seuraavaksi flywayn käyttöönotto.