@@ -1,6 +1,5 @@
 package fi.vm.sade.koodisto.validator;
 
-import org.apache.commons.lang.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -18,7 +17,7 @@ public class ValidatorUtil {
     }
 
     public static void checkForBlank(String toCheck, RuntimeException toThrow) {
-        if (StringUtils.isBlank(toCheck)) {
+        if (toCheck.isBlank()) {
             logger.warn("Failure during isBlank check: " + toThrow.getMessage());
             throw toThrow;
         }
